--- a/PoGo.NecroBot.CLI/Config/Translations/translation.nl.json
+++ b/PoGo.NecroBot.CLI/Config/Translations/translation.nl.json
@@ -31,7 +31,7 @@
     },
     {
       "Key": "eventFortUsed",
-      Value": "Naam: {0} XP: {1}, Gems: {2}, Items: {3}, Lat: {4}, Long: {5}"
+      "Value": "Naam: {0} XP: {1}, Gems: {2}, Items: {3}, Lat: {4}, Long: {5}"
     },
     {
       "Key": "eventFortFailed",
